crates/lattice-actor/tests/ui/derive/unknown_option.stderr
error: unsupported request option; expected `response`
 --> tests/ui/derive/unknown_option.rs:2:11
  |
2 | #[request(reply = u64)]
  |           ^^^^^
