crates/lattice-actor/tests/ui/derive/unknown_option.rs
#[derive(lattice_actor::Request)]
#[request(reply = u64)]
struct UnknownOption;

fn main() {}
